@@ -5,7 +5,6 @@
   * Objects types
   * Others?
 - Allow to select the current bow
-- at the beginning of every book I should have the opportunity to get a new backpack if i lost it in the previous book
 - in book 1 sect 180 I should be able to elude the combat without fighting; or if the combat has multiple enemy, I think I 
   should elude ALL the enemy and then change section.
 - Equipment sections. When there are exceptions (all meals == one object), show a message always visible with that info
