@@ -15,9 +15,6 @@
             <endurance count="+[MAXENDURANCE]" />
             <!-- Drop the previous books map -->
             <drop objectId="map" />
-            <test not="true" hasObject="backpack" >
-                <pick objectId="backpack" />
-            </test>
         </section>
 
         <section id="gamerulz">
@@ -35,7 +32,10 @@
             <test not="true" hasObject="map" >
                 <pick objectId="map" />
             </test>
-
+            <test not="true" hasObject="backpack" >
+                <pick objectId="backpack" />
+            </test>
+            
             <randomTable>
                 <pick class="money" count="[RANDOM] + 10" />
             </randomTable>
